--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         </activity>
         <activity
             android:name = "com.maxm.just_stamped.authorization.SignInUpWithGoogle"
-            android:label = "registration_google">
+            android:label = "com.maxm.just_stamped.authorization.SignInUpWithGoogle">
         </activity>
     </application>
 
