Adding OnClick method to ImageButton in MainActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,13 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+
         <activity
-            android:name = "com.maxm.just_stamped.authorization.SignInUpWithGoogle"
-            android:label = "com.maxm.just_stamped.authorization.SignInUpWithGoogle">
+            android:name="com.maxm.just_stamped.authorization.SignInUpWithGoogle">
         </activity>
+
     </application>
 
 </manifest>
