--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         </activity>
 
         <activity
-            android:name="com.maxm.just_stamped.authorization.SignInUpWithGoogle">
+            android:name="com.maxm.just_stamped.authorization.BarHeader">
         </activity>
 
     </application>
