--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,12 +28,11 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:24.1.1'
-
-    compile 'com.google.firebase:firebase-auth:9.8.0'
-
-    compile 'com.google.android.gms:play-services-auth:9.8.0'
-
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta3'
+    compile 'com.google.firebase:firebase-auth:9.0.0'
+    compile 'com.google.android.gms:play-services-auth:9.0.0'
+    //compile 'com.jakewharton:butterknife:5.1.1'
+    //compile 'com.android.support:cardview-v7:24.1.1'
 
     testCompile 'junit:junit:4.12'
 }
