--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta3'
     compile 'com.google.firebase:firebase-auth:9.0.0'
     compile 'com.google.android.gms:play-services-auth:9.0.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     //compile 'com.jakewharton:butterknife:5.1.1'
     //compile 'com.android.support:cardview-v7:24.1.1'
 
